test/shouldnt-compile/const-clear.cpp
#include "common.hpp"


void check() {
  const Enums es1;
  es1.clear();
}
